# SlicerPRISMRendering

./: .gitignore  .readthedocs.yml  CMakeLists.txt  Doxyfile  README.md  slicerPRISM.s4ext
PRISMRendering/: CMakeLists.txt  PRISMRendering.py
PRISMRendering/PRISMRenderingLogic/: PRISMRenderingLogic.py  __init__.py
PRISMRendering/PRISMRenderingParams/: BoolParam.py  FloatParam.py  FourFParam.py  IntParam.py  Param.py  RangeParam.py  TransferFunctionParam.py  __init__.py
PRISMRendering/PRISMRenderingPoints/: CustomShaderPoints.py  __init__.py
PRISMRendering/PRISMRenderingShaders/: ChromaDepthShader.py  CustomShader.py  DeclutteringShader.py  EchoVolumeShader.py  OpacityPeelingShader.py  OutlineShader.py  PlaneIntersectingShader.py  SphereCarvingShader.py  SquareCarvingShader.py  Template  __init__.py
PRISMRendering/PRISMRenderingVolumes/: PRISMRenderingVolume.py  __init__.py
PRISMRendering/Resources/UI/: PRISMRendering.ui
RenduVolumiqueCustomShader/: CMakeLists.txt  PRISM.py  PRISMLogic.py
RenduVolumiqueCustomShader/Resources/: CustomShader.py  ModifyParamWidget.py  shader2.glsl
RenduVolumiqueCustomShader/Resources/Shaders/: CarveOpacityPeelingShader.py  ChromaDepthShader.py  CubeCarvingShader.py  CylinderCarvingShader.py  CylinderIntersectionShader.py  DoublePlaneShader.py  DrillCoreShader.py  OpacityPeelingShader.py  OutlineShader.py  PlaneIntersectingShader.py  SphereCarvingShader.py  Template
RenduVolumiqueCustomShader/Resources/UI/: PRISM.ui
SlicerPRISM/: CMakeLists.txt  PRISM.py  PRISMLogic.py
SlicerPRISM/Resources/: CustomShader.py  VirtualRealityHelper.py  shaderTags.json
SlicerPRISM/Resources/Documentation/html/: class_slicer_p_r_i_s_m_1_1_p_r_i_s_m_1_1_p_r_i_s_m.html  class_slicer_p_r_i_s_m_1_1_p_r_i_s_m_1_1_p_r_i_s_m__coll__graph.dot  class_slicer_p_r_i_s_m_1_1_p_r_i_s_m_1_1_p_r_i_s_m_widget__inherit__graph.dot  class_slicer_p_r_i_s_m_1_1_p_r_i_s_m_logic_1_1_p_r_i_s_m_logic-members.html  class_slicer_p_r_i_s_m_1_1_p_r_i_s_m_logic_1_1_p_r_i_s_m_logic.js  class_slicer_p_r_i_s_m_1_1_p_r_i_s_m_logic_1_1_p_r_i_s_m_logic__inherit__graph.dot  class_slicer_p_r_i_s_m_1_1_resources_1_1_custom_shader_1_1_custom_shader-members.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_custom_shader_1_1_custom_shader.js  class_slicer_p_r_i_s_m_1_1_resources_1_1_custom_shader_1_1_custom_shader__inherit__graph.dot  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_chroma_depth_shader_1_1_chroma_depth_shader.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_chroma_depth_shader_1_1_chroma_depth_shader.js  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_decluttering_1_1_decluttering.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_decluttering_1_1_decluttering__inherit__graph.dot  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_opacity_peeling_shader_1_1_opacity_peeling_shader-members.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_outline_shader_1_1_outline_shader.js  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_outline_shader_1_1_outline_shader__inherit__graph.dot  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_sphere_carving_shader_1_1_sphere_carving_shader.js  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_sphere_carving_shader_1_1_sphere_carving_shader__inherit__graph.dot  class_slicer_p_r_i_s_m_1_1_resources_1_1_virtual_reality_helper_1_1_virtual_reality_helper.html  classes.html  dir_12729d163994a1f7189af7b7e2d9c5f8.html  dir_204fb25b01be6093af25798915f22904.html  dir_218a513a531196ba887183a21fe017e3.html  dir_bde32bf976401edbce144c1ca78437b0.html  dir_e1c603d7e2101b8fa861aec29fdc418c.html  dir_fa6e763ff008098bf824bb61dd486ee8.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_2.dot  menudata.js  navtreedata.js  navtreeindex0.js
SlicerPRISM/Resources/Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_d.js  all_f.js  classes_3.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_9.js  functions_b.js  functions_c.js  searchdata.js  variables_1.js  variables_4.js  variables_6.js  variables_9.js  variables_a.js
SlicerPRISM/Resources/Shaders/: ChromaDepthShader.py  Decluttering.py  OpacityPeelingShader.py  OutlineShader.py  PlaneIntersectingShader.py  SphereCarvingShader.py  Template
SlicerPRISM/Resources/UI/: PRISM.ui
SlicerPRISM/Resources/docs/: README.md
SlicerPRISM/Resources/docs/html/: annotated.html  annotated_dup.js  class_slicer_p_r_i_s_m_1_1_p_r_i_s_m_1_1_p_r_i_s_m_widget.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_custom_shader_1_1_custom_shader.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_decluttering_1_1_decluttering.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_decluttering_1_1_decluttering.js  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_plane_intersecting_shader_1_1_plane_intersecting_shader-members.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_plane_intersecting_shader_1_1_plane_intersecting_shader.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_plane_intersecting_shader_1_1_plane_intersecting_shader.js  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_plane_intersecting_shader_1_1_plane_intersecting_shader__coll__graph.dot  class_slicer_p_r_i_s_m_1_1_resources_1_1_shaders_1_1_sphere_carving_shader_1_1_sphere_carving_shader-members.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_virtual_reality_helper_1_1_virtual_reality_helper-members.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_virtual_reality_helper_1_1_virtual_reality_helper.html  class_slicer_p_r_i_s_m_1_1_resources_1_1_virtual_reality_helper_1_1_virtual_reality_helper.js  dir_7393606eaa465579972432ecfbc9cab0.html  dir_bde32bf976401edbce144c1ca78437b0.html  index.html  inherit_graph_0.dot  inherit_graph_4.dot
SlicerPRISM/Resources/docs/html/search/: all_b.js  all_c.js  all_e.js  classes_0.js  functions_3.js  functions_a.js  functions_d.js  variables_3.js
docs/: Doxyfile  README.md  ____init_____8py.html  (+1169 more)
(+394 files in other folders)
